--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ body {
   margin-bottom:50px;
   flex: 1 0 auto;
 }
+
+.container img {
+  margin-left: 0;
+}
+
 p {
   line-height: 1.5;
   margin: 30px 0;
