--- a/css/main.css
+++ b/css/main.css
@@ -15,10 +15,6 @@ body {
   flex: 1 0 auto;
 }
 
-.container img {
-  margin-left: 0;
-}
-
 p {
   line-height: 1.5;
   margin: 30px 0;
@@ -92,7 +88,8 @@ img::-moz-selection {
 
 img {
   display: block;
-  margin: auto;
+  /* margin: auto; */
+  margin-left: 0;
   max-width: 100%;
 }
 
