--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-flow: column;
   height: 100vh;
+  overflow-x: scroll;
 }
 .container[role=main] {
   margin-bottom:50px;
